syntax = "proto3";


package wat_api;

service Wat {
    rpc RegisterClient(Registration) returns (RegistrationResponse);
    rpc OpenChat(stream ClientMessage) returns (stream ServerMessage);
}


message Registration {
    string nick = 1;
    Location location = 2;
}

message RegistrationResponse {
    enum Status {
        OK = 0;
        NICK_ALREADY_IN_USE = 1;
    }
    Status status = 1;
    string token = 2;
}

message ClientMessage {
    string content = 2;
}

message ServerMessage {
    string nick = 1;
    string content = 2;
    Location location = 3;
}

message Location {
    string city = 1;
    string loc = 2;
}
